--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,10 @@ img{
 		transition: 1s all;
 }
 
+#slide4-right-text-toggle:hover{
+	cursor: pointer;
+}
+
 .arrowDown{
 		transform: rotate(90deg) !important;
     -moz-transform:rotate(90deg) !important;
